--- a/src/components/register.html
+++ b/src/components/register.html
@@ -16,7 +16,7 @@
       type="email"
       name="email"
       placeholder="Enter Email"
-      value="<%= typeof email != 'undefined' ? email : '' %>"
+      value="%= typeof email != 'undefined' ? email : '' %>"
     />
   </div>
   <div >
