--- a/client/src/components/login.html
+++ b/client/src/components/login.html
@@ -1,7 +1,7 @@
 
 <h1> Login </h1>
 
-<form action="/users/login" method="POST">
+<form action="/user/login" method="POST">
 <div>
 <label for="email">Email</label>
 <input
