Loads boards by user

--- a/client/src/components/navbar/nbstyle.css
+++ b/client/src/components/navbar/nbstyle.css
@@ -1,6 +1,3 @@
-.navbar-brand {
-    background-color: rgb(221, 65, 44);
-}
-.navbar-nav {
-    background-color: rgb(221, 65, 44);
+.nav{
+    background-color: rgb(65, 112, 59);
 }
