--- a/client/src/components/imageApiContainer/style.css
+++ b/client/src/components/imageApiContainer/style.css
@@ -4,7 +4,7 @@ header img {
 }
 body {
     height: 125vh;
-    background-image: url('https://themindfool.com/wp-content/uploads/2020/02/live-your-dream-2045928__340.jpg');
+    background-image: url('https://st3.depositphotos.com/1766887/14962/i/950/depositphotos_149621984-stock-photo-beautiful-villages-of-italy-ceccano.jpg');
     background-size: cover;
     font-family: sans-serif;
     margin-top: 80px;
