--- a/client/src/components/navbar/nbstyle.css
+++ b/client/src/components/navbar/nbstyle.css
@@ -1,6 +1,11 @@
 .navbar-brand {
-    background-color: rgb(221, 65, 44);
+    background-color: lightblue;
+    margin-left: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
 }
 .navbar-nav {
-    background-color: rgb(221, 65, 44);
+    background-color: lightblue;
+    margin-right: 500px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
