--- a/client/src/components/container/style.css
+++ b/client/src/components/container/style.css
@@ -1,4 +1,4 @@
-header img {
+/* header img {
     height: 80px;
     margin-left: 40px;
 }
@@ -46,4 +46,4 @@ header li {
 header li a {
     color: black;
     text-decoration: none;
-}
+} */
