--- a/client/src/components/footer/style.css
+++ b/client/src/components/footer/style.css
@@ -1,5 +1,14 @@
 .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
     text-align: center; 
-    background-color: rgb(235, 35, 35);
+    background-color:lightblue;
+    width: "50%";
+    margin-top: "1000px";
+    font-size: larger;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
