--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,47 +1,55 @@
-.masonry-container{
-	width: 80%;
-	margin: auto;
-	margin-top: 10px;
-	border: 1px solid rgba(0,0,0,.1);
-	p{
-		text-align: center;
-		padding: 4px;
-		font-family: monospace;
-		background: #222;
-		color: #efefef;
-	}
+.masonry-container {
+  width: 80%;
+  margin: auto;
+  margin-top: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.masonry{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-content: stretch;
-	width: 100%;
-	margin: auto;
+p {
+  text-align: center;
+  padding: 4px;
+  font-family: monospace;
+  background: #222;
+  color: #efefef;
 }
-.column{
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-content: stretch;
-	flex-grow: 1;
+
+.masonry {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: stretch;
+  width: 100%;
+  margin: auto;
 }
-.tile{
-	margin: 4px;
-	img{
-		box-shadow: 0 1px 1px 2px rgba(0,0,0, .15);
-		border-radius: 10px;
-		width: 100%;
-	}
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: stretch;
+  flex-grow: 1;
+}
+.tile {
+  margin: 4px;
+}
+img {
+  box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  width: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+body{
+	background-image: url("./IMG_0876.jpeg"),("./IMG_0812.jpeg");
+	background-size: contain;
+}
+h3{
+	text-align: center;
 }
