--- a/client/src/components/navbar/nbstyle.css
+++ b/client/src/components/navbar/nbstyle.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Patrick+Hand+SC&display=swap');
 .navbar-brand {
     margin-left: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: xx-large;    
+    font-family: 'Patrick Hand SC', cursive;
+    font-size: 30px;    
 }
 .navbar-nav {
     margin-right: 500px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Josefin Slab', serif;
+    font-size: larger
 }
